# suss-llm

./: .env.example  README.md  pyproject.toml
models/: bm25_baseline.py  ranking_model.py
scripts/: evaluate_model.py  run_simulation.py
simulations/user_profiles/component/: user_profile_example.yml
sussllm/: dataset.py  interaction.py  profiles.py  prompt.py  reasoning.py  simulation.py  train.py
sussllm/llm_agent/: base.py
sussllm/search/interfaces/: bing_search_engine.py  google_search_engine.py
sussllm/user_profile/: README.md
sussllm/user_profile/component/contexts/: memory.py
sussllm/user_profile/component/loggers/: __init__.py  base.py  fixed_cost.py  fixed_cost_goal.py  fixed_cost_notime.py
sussllm/user_profile/component/query_generators/: additional_terms.py  base.py  bi_term.py  dud_smart.py  google_suggest.py  google_suggest_random.py  predetermined_query.py  qs34_query.py  refining_smarter.py  single_reversed_tri_interleaved.py  single_reversed_tri_reversed_interleaved.py  single_smarter_interleaved.py  single_term.py  single_term_reversed.py  single_tri_interleaved.py  tri_term.py
sussllm/user_profile/component/result_classifiers/: base.py  base_informed_trec.py  ifind.py  informed_trec.py  language_model.py  language_model_topic.py  perfect.py
sussllm/user_profile/component/result_stopping_decider/: base.py  difference.py  fixed_depth.py  ift_based.py  inst.py  limited_satisfaction.py  patch_combination.py  patch_combination_simplified.py  random.py  rbp.py  satisfaction.py  (+8 more)
sussllm/utils/: evaluation_metrics.py  helpers.py  logger.py
(+5 files in other folders)
